# koalla

./: CMakeLists.txt  package.xml
bagfiles/: data.txt  pose.bag  pose1.bag  pose1.txt
cfg/: Koalla.cfg
include/: AdaptiveThreshold.h
launch/: koalla.launch  koalla_apm.launch  koalla_bebop.launch  koalla_old.launch  koalla_outdoor.launch  koalla_ruan.launch  koalla_teste.launch  koalla_with_real_camera.launch  real_apm.launch  teste.launch  threhsold_with_reconfigure.launch
src/: adaptive_threshold.cpp  image_subscriber.cpp  koalla-05-06-17.cpp  koalla.cpp  koalla_ate_240517.cpp  koalla_backup.cpp  koalla_icar.cpp  teste.cpp  threshold_with_reconfigure.cpp
src 030417)/: AdaptiveThreshold.cpp  camera_driver.cpp  image_subscriber.cpp  image_subscriber_ruan.cpp
worlds/: empty.world  outdoor_village.world  world1.world
